# obs-studio-sim

.github/workflows/: main.yml
CI/linux/: 02_build_obs.sh
UI/: CMakeLists.txt  adv-audio-control.cpp  adv-audio-control.hpp  audio-encoders.cpp  obs-app.cpp  volume-control.cpp  volume-control.hpp  window-basic-adv-audio.cpp  window-basic-main-outputs.cpp  window-basic-main-outputs.hpp  window-basic-main-profiles.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings-stream.cpp  window-basic-settings.cpp  window-basic-settings.hpp  window-basic-status-bar.cpp  window-basic-status-bar.hpp
UI/data/locale/: en-US.ini
UI/data/themes/: Acri.qss  Dark.qss  Default.qss  Rachni.qss  System.qss
UI/forms/: OBSBasic.ui  OBSBasicSettings.ui  obs.qrc
UI/frontend-plugins/: CMakeLists.txt
UI/frontend-plugins/decklink-captions/: decklink-captions.cpp
UI/frontend-plugins/ffmpeg-output-ui/: CMakeLists.txt  FFmpegOutputUI.cpp  FFmpegOutputUI.h  ffmpeg-ui-main.cpp  ffmpeg-ui-main.h
UI/frontend-plugins/ffmpeg-output-ui/data/locale/: en-US.ini
UI/frontend-plugins/ffmpeg-output-ui/forms/: output.ui
cmake/Modules/: CopyMSVCBins.cmake  Findasio.cmake  Findrtaudio.cmake
libobs/: obs-audio-controls.c  obs-audio-controls.h  obs-audio.c  obs-encoder.h  obs-hotkey.c  obs-hotkey.h  obs-internal.h  obs-output.c  obs-output.h  obs-scene.c  obs-source-transition.c  obs-source.c  obs-source.h  obs.c  obs.h
libobs/audio-monitoring/pulse/: pulseaudio-output.c
libobs/audio-monitoring/win32/: wasapi-output.c  wasapi-output.h
libobs/media-io/: audio-io.c  audio-io.h  audio-resampler-ffmpeg.c  media-io-defs.h  media-remux.c
plugins/: CMakeLists.txt
plugins/decklink/: audio-repack.c  audio-repack.h  const.h  decklink-device-instance.cpp  decklink-source.cpp
plugins/decklink/data/locale/: en-US.ini
plugins/image-source/: obs-slideshow.c
plugins/linux-alsa/: alsa-input.c
plugins/linux-pulseaudio/: pulse-input.c
plugins/mac-capture/: mac-audio.c
plugins/mac-vth264/: encoder.c
plugins/obs-ffmpeg/: CMakeLists.txt  jim-nvenc.c  obs-ffmpeg-audio-encoders.c  obs-ffmpeg-formats.h  obs-ffmpeg-mpegts.c  obs-ffmpeg-mux.c  obs-ffmpeg-nvenc.c  obs-ffmpeg-output.c  obs-ffmpeg-output.h  obs-ffmpeg-source.c  obs-ffmpeg-srt.h  obs-ffmpeg-url.h
plugins/obs-ffmpeg/data/locale/: en-US.ini
plugins/obs-ffmpeg/ffmpeg-mux/: ffmpeg-mux.c
plugins/obs-filters/: CMakeLists.txt  noise-suppress-filter.c  nvidia-greenscreen-filter.c  obs-filters.c
plugins/obs-filters/data/locale/: en-US.ini
plugins/obs-libfdk/: obs-libfdk.c
plugins/obs-outputs/: flv-mux.c  rtmp-stream.c  rtmp-stream.h
plugins/obs-qsv11/: obs-qsv11.c
plugins/obs-track-out/: obs-track-out.c
plugins/obs-transitions/: transition-stinger.c
plugins/obs-virtual-cam-filter/: CMakeLists.txt
plugins/obs-vst3/: CMakeLists.txt  obs-vst3.cpp  obs-vst3.hpp
plugins/obs-vst3/data/locale/: en-US.ini
plugins/obs-webrtc/: CMakeLists.txt  webrtc-utils.h  whep-source.cpp  whep-source.h  whip-output.cpp  whip-output.h
plugins/obs-webrtc/cmake/: legacy.cmake
plugins/obs-webrtc/data/locale/: en-US.ini
plugins/obs-x264/: obs-x264.c
plugins/rematrix-filter/: CMakeLists.txt  rematrix-filter.c
plugins/rtmp-services/: rtmp-custom.c
plugins/win-asio/: .gitignore  CMakeLists.txt  asio-input.cpp  asio-input.qrc
plugins/win-asio/data/locale/: en-US.ini
plugins/win-dshow/: ffmpeg-decode.c  win-dshow.cpp
plugins/win-wasapi/: win-wasapi.cpp
